--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
             <input class="input" type="radio" name="slide" id="slide5">
 
             <div class="slide s1">
-                <img src="amor1.jpeg">
+                <img src="lib/img/amor1.jpeg">
             </div>
             <div class="slide">
-                <img src="amor2.jpeg">
+                <img src="lib/img/amor2.jpeg">
             </div>
             <div class="slide">
-                <img src="amor3.jpeg">
+                <img src="lib/img/amor3.jpeg">
             </div>
             <div class="slide">
-                <img src="amor4.jpeg">
+                <img src="lib/img/amor4.jpeg">
             </div>
             <div class="slide">
-                <img src="amor5.jpeg">
+                <img src="lib/img/amor5.jpeg">
             </div>
         </div>
     </div>
